--- a/src/WebApplication.NLog/project.json
+++ b/src/WebApplication.NLog/project.json
@@ -1,12 +1,17 @@
-{
-  "authors": [ "Dmitry Sikorsky" ],
-  "buildOptions": { "embed": [ "Views/**" ] },
+﻿{
+  "version": "1.0.0-*",
+
   "dependencies": {
     "ExtCore.Infrastructure": "1.0.0-alpha901",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "NETStandard.Library": "1.6.0",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0"
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0",
+    "NLog.Extensions.Logging": "1.0.0-rtm-alpha2",
+    "NLog.Web.AspNetCore": "4.2.4"
   },
+
   "frameworks": {
     "netstandard1.6": {
       "imports": [
@@ -15,6 +20,5 @@
         "portable-net45+win8"
       ]
     }
-  },
-  "version": "1.0.0-*"
+  }
 }
