--- a/src/WebApplication.Swagger/project.json
+++ b/src/WebApplication.Swagger/project.json
@@ -1,11 +1,14 @@
-{
-  "authors": [ "Dmitry Sikorsky" ],
-  "buildOptions": { "embed": [ "Styles/**", "Views/**" ] },
+﻿{
+  "version": "1.0.0-*",
+
   "dependencies": {
     "ExtCore.Infrastructure": "1.0.0-alpha901",
+    "NETStandard.Library": "1.6.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
-    "NETStandard.Library": "1.6.0"
+    "Swashbuckle": "6.0.0-beta901",
+    "Swashbuckle.Swagger": "6.0.0-beta901"
   },
+
   "frameworks": {
     "netstandard1.6": {
       "imports": [
@@ -14,6 +17,5 @@
         "portable-net45+win8"
       ]
     }
-  },
-  "version": "1.0.0-*"
+  }
 }
