--- a/src/WebApplication/project.json
+++ b/src/WebApplication/project.json
@@ -7,10 +7,8 @@
     "preserveCompilationContext": true
   },
   "dependencies": {
-    "ExtCore.Data": "1.0.0-alpha9",
-    "ExtCore.Data.EntityFramework.Sqlite": "1.0.0-alpha9",
-    "ExtCore.Infrastructure": "1.0.0-alpha9",
-    "ExtCore.WebApplication": "1.0.0-alpha9",
+    "ExtCore.Infrastructure": "1.0.0-alpha901",
+    "ExtCore.WebApplication": "1.0.0-alpha901",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -20,7 +18,18 @@
       "version": "1.0.0",
       "type": "platform"
     },
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0"
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0",
+    "NLog.Extensions.Logging": "1.0.0-rtm-alpha2",
+    "NLog.Web.AspNetCore": "4.2.4",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "NETStandard.Library": "1.6.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "Microsoft.AspNetCore.Diagnostics.Elm": "0.1.0",
+    "Swashbuckle": "6.0.0-beta901",
+    "Swashbuckle.Swagger": "6.0.0-beta901"
   },
   "frameworks": {
     "netcoreapp1.0": {
@@ -36,7 +45,8 @@
       "Views",
       "wwwroot",
       "config.json",
-      "web.config"
+      "web.config",
+      "nlog.config"
     ]
   },
   "runtimeOptions": {
