--- a/src/WebApplication.WebAPI/project.json
+++ b/src/WebApplication.WebAPI/project.json
@@ -10,7 +10,11 @@
 
   "frameworks": {
     "netstandard1.6": {
-      "imports": "dnxcore50"
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ]
     }
   }
 }
