--- a/NuGet.config
+++ b/NuGet.config
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="local" value="package" />
+    <add key="local" value="packages" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
-  <disabledPackageSources>
-    <add key="local" value="true" />
-  </disabledPackageSources>
 </configuration>
