--- a/src/WebApplication.EFCoreRawQuery/WebApplication.EFCoreRawQuery.csproj
+++ b/src/WebApplication.EFCoreRawQuery/WebApplication.EFCoreRawQuery.csproj
@@ -12,10 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.2" />
-    <PackageReference Include="ExtCore.Infrastructure" Version="1.0.1-alpha901" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.0.3" />
+    <PackageReference Include="MyStandard.Library" Version="1.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
