--- a/src/WebApplication.Elm/WebApplication.Elm.csproj
+++ b/src/WebApplication.Elm/WebApplication.Elm.csproj
@@ -12,10 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Infrastructure" Version="1.0.1-alpha901" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Elm" Version="0.1.0" />
+    <PackageReference Include="MyStandard.Library" Version="1.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
