--- a/src/WebApplication.ExtensionA/WebApplication.ExtensionA.csproj
+++ b/src/WebApplication.ExtensionA/WebApplication.ExtensionA.csproj
@@ -14,8 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Infrastructure" Version="1.0.1-alpha901" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
+    <PackageReference Include="MyStandard.Library" Version="1.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
