--- a/src/WebApplication.NLog/WebApplication.NLog.csproj
+++ b/src/WebApplication.NLog/WebApplication.NLog.csproj
@@ -12,13 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Infrastructure" Version="1.0.1-alpha901" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.0.2" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-alpha2" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.2.4" />
+    <PackageReference Include="MyStandard.Library" Version="1.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
