--- a/src/Package/Package.Infrastracture.Services/Package.Infrastracture.Services.csproj
+++ b/src/Package/Package.Infrastracture.Services/Package.Infrastracture.Services.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
+    <AssemblyName>Package.Infrastracture.Services</AssemblyName>
+    <PackageId>Package.Infrastracture.Services</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>Package.Infrastracture.Services</RootNamespace>
   </PropertyGroup>
 
 </Project>
