--- a/src/DomainModel/DomainModel.Daos/DomainModel.Daos.csproj
+++ b/src/DomainModel/DomainModel.Daos/DomainModel.Daos.csproj
@@ -2,14 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
-    <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
+    <AssemblyName>DomainModel.Daos</AssemblyName>
+    <PackageId>DomainModel.Daos</PackageId>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>DomainModel.Daos</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DomainModel.Infrastracture.Daos\DomainModel.Infrastracture.Daos.csproj" />
+    <ProjectReference Include="..\Models\DomainModel.Models.csproj" />
+  </ItemGroup>
 
 </Project>
