--- a/src/PackageCustum/PackageCustum.Models/PackageCustum.Models.csproj
+++ b/src/PackageCustum/PackageCustum.Models/PackageCustum.Models.csproj
@@ -2,14 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
+    <AssemblyName>PackageCustum.Models</AssemblyName>
+    <PackageId>PackageCustum.Models</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>PackageCustum.Models</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Package\Package.Models\Package.Models.csproj" />
+  </ItemGroup>
 
 </Project>
