--- a/src/PackageCustum/PackageCustum.Repositorys/PackageCustum.Repositorys.csproj
+++ b/src/PackageCustum/PackageCustum.Repositorys/PackageCustum.Repositorys.csproj
@@ -2,14 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
+    <AssemblyName>PackageCustum.Repositorys</AssemblyName>
+    <PackageId>PackageCustum.Repositorys</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>PackageCustum.Repositorys</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Package\Package.Repositorys\Package.Repositorys.csproj" />
+    <ProjectReference Include="..\..\Package\Package.Infrastracture.Repositorys\Package.Infrastracture.Repositorys.csproj" />
+    <ProjectReference Include="..\PackageCustum.Models\PackageCustum.Models.csproj" />
+  </ItemGroup>
 
 </Project>
