--- a/src/PackageCustum/PackageCustum.Services/PackageCustum.Services.csproj
+++ b/src/PackageCustum/PackageCustum.Services/PackageCustum.Services.csproj
@@ -2,14 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
+    <AssemblyName>PackageCustum.Services</AssemblyName>
+    <PackageId>PackageCustum.Services</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>PackageCustum.Services</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Package\Package.Infrastracture.Repositorys\Package.Infrastracture.Repositorys.csproj" />
+    <ProjectReference Include="..\..\Package\Package.Infrastracture.Services\Package.Infrastracture.Services.csproj" />
+    <ProjectReference Include="..\PackageCustum.Models\PackageCustum.Models.csproj" />
+  </ItemGroup>
 
 </Project>
