--- a/src/PackageCustum/PackageCusum.Extentions/PackageCusum.Extentions.csproj
+++ b/src/PackageCustum/PackageCusum.Extentions/PackageCusum.Extentions.csproj
@@ -2,14 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>DomainModel.Infrastracture.Repositorys</AssemblyName>
-    <PackageId>DomainModel.Infrastracture.Repositorys</PackageId>
+    <AssemblyName>PackageCustum.Extentions</AssemblyName>
+    <PackageId>PackageCustum.Extentions</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>DomainModel.Infrastracture.Repositorys</RootNamespace>
+    <RootNamespace>PackageCustum.Extentions</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PackageCustum.Controllers\PackageCustum.Controllers.csproj" />
+    <ProjectReference Include="..\PackageCustum.Repositorys\PackageCustum.Repositorys.csproj" />
+    <ProjectReference Include="..\PackageCustum.Services\PackageCustum.Services.csproj" />
+  </ItemGroup>
 
 </Project>
