--- a/src/PackageDefaultCustom/PackageDefaultCustom.Models/PackageDefaultCustom.Models.csproj
+++ b/src/PackageDefaultCustom/PackageDefaultCustom.Models/PackageDefaultCustom.Models.csproj
@@ -2,20 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <AssemblyName>Package.Controllers</AssemblyName>
-    <PackageId>Package.Controllers</PackageId>
+    <AssemblyName>PackageDefaultCustom.Models</AssemblyName>
+    <PackageId>PackageDefaultCustom.Models</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <RootNamespace>Package.Controllers</RootNamespace>
+    <RootNamespace>PackageDefaultCustom.Models</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Package.Infrastracture.Controllers\Package.Infrastracture.Controllers.csproj" />
-    <ProjectReference Include="..\Package.Infrastracture.Services\Package.Infrastracture.Services.csproj" />
-    <ProjectReference Include="..\Package.Models\Package.Models.csproj" />
+    <ProjectReference Include="..\..\Package\Package.Models\Package.Models.csproj" />
   </ItemGroup>
 
 </Project>
